product description overflow quick fix

--- a/src/css/_product.scss
+++ b/src/css/_product.scss
@@ -1,5 +1,6 @@
 #product-page{
   box-sizing: border-box;
+  
   .product{
     display: flex;
     justify-content: center;
@@ -14,6 +15,8 @@
     }
   
     .right-column{
+      display: flex;
+      background-color: $primary;
   
       @include max-breakpoint(xxl){
         width: 100%;
@@ -29,9 +32,9 @@
 
   .text-holder{
     display: block;
-    background-color: $primary;
     opacity: 0.8;
-    padding: 63px 50px;
+    padding: 0 50px;
+    margin: auto 0;
 
     p{
       color: white;
